<resources>

    <!-- App-->
    <string name="app_name">Music Player</string>
    <string name="app_version">Version %1$s</string>
    <string name="preference_file_key">GLOBAL_STATE</string>

    <string name="action_play_next">play next</string>
    <string name="action_add_to_playing_queue">Add to playlist</string>
    <string name="action_share">Share</string>
    <string name="action_details">Details</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_delete_song_from_playlist">Remove from playlist</string>

    <string name="action_delete_playlist">Delete playlist</string>
    <string name="action_rename_playlist">Rename</string>

    <!-- Modal bottom sheet items -->
    <string name="first_item_modal_bottomsheet">Date modified</string>
    <string name="second_item_modal_bottomsheet">Name</string>
    <string name="third_item_modal_bottomsheet">Artist</string>
    <string name="forth_item_modal_bottomsheet">Genre</string>
    <string name="fifth_item_modal_bottomsheet">Duration</string>

    <!-- Add playlist dialog -->
    <string name="add_playlistDialog_positive_btn">Ok</string>
    <string name="add_playlistDialog_negative_btn">Cancel</string>
    <string name="add_playlistDialog_title">create playlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Notification-->
    <string name="notification_channel_id">player_channel_id</string>
    <string name="notification_description">The playing notification provides actions for play/pause etc.</string>
    <string name="notification_action_previous">action_previous</string>
    <string name="notification_action_play">action_play</string>
    <string name="notification_action_next">action_next</string>
    <string name="notification_action_rewind">action_rewind</string>
    <string name="notification_action_fast_forward">action_fast_forward</string>
    <string name="notification_action_stop">action_stop</string>
    <string name="notification_action_pause">action_pause</string>
    <string name="extra_key">actionname</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- SharedPreferences-->
    <string name="preference_shuffle_is_on">SHUFFLE_IS_ON</string>
    <string name="preference_shuffle_default">SHUFFLE_IS_NONE</string>
    <string name="preference_repeat_one">REPEAT_ONE</string>
    <string name="preference_last_song_id">LAST_SONG_ID</string>
    <string name="preference_last_song_position">LAST_SONG_POSITION</string>

    <!-- Expandable toolbar-->
    <string name="songs_tab">Songs</string>
    <string name="playlists_tab">Playlists</string>
    <string name="favorites_tab">Favorite</string>

    <!-- Suffixes-->
    <string name="file_size">%1$d MB</string>
    <string name="file_bitrate">%1$s kb/s</string>

    <!-- Player-->
    <string name="onBtnClicked">btn</string>
    <string name="onSongCompletion">com</string>
    <string name="play_prev">prev</string>
    <string name="play_next">next</string>


    <!-- Toast messages-->
    <string name="createPlaylist_error">Please create a playlist first!</string>
    <string name="duplicate_name_error">Duplicate name</string>
    <string name="no_name_error">Please enter a name</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="selectPlaylistDialogTitle">Choose Playlists</string>
    <string name="createPlaylistTitle">Create Playlist</string>


    <!-- Playlist card-->
    <string name="countOfSongsInPlaylist">%s Song(s)</string>

    <!-- Song Details Dialog-->
    <string name="songDetailsDialog_title">Details</string>
    <string name="songDetailsDialog_filePath">File path</string>
    <string name="songDetailsDialog_fileName">File name</string>
    <string name="songDetailsDialog_fileSize">File size</string>
    <string name="songDetailsDialog_fileLength">Length</string>
    <string name="songDetailsDialog_fileBitrate">Bitrate</string>

</resources>