<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/songDetails"

        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/purple_200">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_200"

                android:gravity="center"
                android:padding="10dp"
                android:text="@string/songDetailsDialog_title"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                app:fontFamily="sans-serif"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/path_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@id/details_title">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_file_path_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/songDetailsDialog_filePath"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.117" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_file_path_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:maxLines="3"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/article_size"
                    app:fontFamily="sans-serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_file_path_title"
                    tools:text="/storage/emulated/0/a.mp3" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@id/path_layout">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_file_name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/songDetailsDialog_fileName"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_file_name_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/article_size"
                    app:fontFamily="sans-serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_file_name_title"
                    tools:text="harchi" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/size_layout"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@id/name_layout">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_file_size_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/songDetailsDialog_fileSize"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_file_size_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/article_size"
                    app:fontFamily="sans-serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_file_size_title"
                    tools:text="14 MB" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/length_layout"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@id/size_layout">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_file_length_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/article_size"
                    app:fontFamily="sans-serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_file_length_title"
                    tools:text="06:22" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_file_length_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/songDetailsDialog_fileLength"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bitrate_layout"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@id/length_layout"
                tools:layout_editor_absoluteX="21dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_file_bitrate_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/songDetailsDialog_fileBitrate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.102" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_file_bitrate_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/article_size"
                    app:fontFamily="sans-serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_file_bitrate_title"
                    tools:text="320 kb/s" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/purple_200"
                android:gravity="center"
                android:text="Ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                app:fontFamily="sans-serif"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.902"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bitrate_layout"
                app:layout_constraintVertical_bias="0.164" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>